# uartmaster

./: .gitignore  CMakeLists.txt  README.md  bus.py  send.py
fpga/: Makefile  top.v
rtl/: Makefile  UartMaster.pcf  UartMaster.v  UartMasterSlave.v  UartProtocol.v  fifo.v  top.v  uart_rx.v  uart_tx.v
scripts/: bus.py  send.py  stuff.py
sim/: Makefile  sim.cpp  sim.gtkw  uart.cpp  uart.h
